// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<Fragment>
  <div
    className="spacer-top big-spacer-bottom display-flex-space-between"
  >
    <h2
      className="settings-sub-category-name"
    >
      settings.almintegration.table.title
    </h2>
    <Button
      data-test="settings__alm-create"
      onClick={[MockFunction]}
    >
      settings.almintegration.table.create
    </Button>
  </div>
  <table
    className="data zebra fixed spacer-bottom"
  >
    <thead>
      <tr>
        <th>
          settings.almintegration.table.column.name
        </th>
        <th
          className="action-small text-center"
        >
          settings.almintegration.table.column.edit
        </th>
        <th
          className="action text-center"
        >
          settings.almintegration.table.column.delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-test="settings__alm-empty-table"
      >
        <td
          colSpan={3}
        >
          settings.almintegration.table.empty.azure
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;

exports[`should render correctly: additional columns 1`] = `
<Fragment>
  <div
    className="spacer-top big-spacer-bottom display-flex-space-between"
  >
    <h2
      className="settings-sub-category-name"
    >
      settings.almintegration.table.title
    </h2>
    <Button
      data-test="settings__alm-create"
      onClick={[MockFunction]}
    >
      settings.almintegration.table.create
    </Button>
  </div>
  <table
    className="data zebra fixed spacer-bottom"
  >
    <thead>
      <tr>
        <th>
          settings.almintegration.table.column.name
        </th>
        <th
          key="additional1"
        >
          additional1
        </th>
        <th
          key="additional2"
        >
          additional2
        </th>
        <th
          className="action-small text-center"
        >
          settings.almintegration.table.column.edit
        </th>
        <th
          className="action text-center"
        >
          settings.almintegration.table.column.delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-test="settings__alm-table-row"
        key="definition1"
      >
        <td
          className="nowrap hide-overflow"
          title="definition1"
        >
          definition1
        </td>
        <td
          className="nowrap hide-overflow"
          key="def1-v1"
          title="def1-v1"
        >
          def1-v1
        </td>
        <td
          className="nowrap hide-overflow"
          key="def1-v2"
          title="def1-v2"
        >
          def1-v2
        </td>
        <td
          className="text-center"
          data-test="settings__alm-table-row-edit"
        >
          <ButtonIcon
            onClick={[Function]}
          >
            <EditIcon />
          </ButtonIcon>
        </td>
        <td
          className="text-center"
          data-test="settings__alm-table-row-delete"
        >
          <DeleteButton
            onClick={[Function]}
          />
        </td>
      </tr>
      <tr
        data-test="settings__alm-table-row"
        key="definition2"
      >
        <td
          className="nowrap hide-overflow"
          title="definition2"
        >
          definition2
        </td>
        <td
          className="nowrap hide-overflow"
          key="def2-v1"
          title="def2-v1"
        >
          def2-v1
        </td>
        <td
          className="nowrap hide-overflow"
          key="def2-v2"
          title="def2-v2"
        >
          def2-v2
        </td>
        <td
          className="text-center"
          data-test="settings__alm-table-row-edit"
        >
          <ButtonIcon
            onClick={[Function]}
          >
            <EditIcon />
          </ButtonIcon>
        </td>
        <td
          className="text-center"
          data-test="settings__alm-table-row-delete"
        >
          <DeleteButton
            onClick={[Function]}
          />
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;

exports[`should render correctly: title adjusts for GitLab 1`] = `
<Fragment>
  <div
    className="spacer-top big-spacer-bottom display-flex-space-between"
  >
    <h2
      className="settings-sub-category-name"
    >
      settings.almintegration.table.title
    </h2>
    <Button
      data-test="settings__alm-create"
      onClick={[MockFunction]}
    >
      settings.almintegration.table.create
    </Button>
  </div>
  <table
    className="data zebra fixed spacer-bottom"
  >
    <thead>
      <tr>
        <th>
          settings.almintegration.table.column.name
        </th>
        <th
          className="action-small text-center"
        >
          settings.almintegration.table.column.edit
        </th>
        <th
          className="action text-center"
        >
          settings.almintegration.table.column.delete
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-test="settings__alm-empty-table"
      >
        <td
          colSpan={3}
        >
          settings.almintegration.table.empty.gitlab
        </td>
      </tr>
    </tbody>
  </table>
</Fragment>
`;
